improve renderbatch resilience and add AGPL attribution
- Decouple batch completion from delivery with robust retries and guaranteed cleanup

- Add size-aware batching and summary behavior for render outputs

- Document update-generated assets in .gitignore and add AGPL network-use notice

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 secrets.ini
+
+# --- Content from updating (see docs/UPDATING.md) ---
+# Extract output (if scripts/extract.py is run from repo root)
+/res_extract/
+# Generated ships data: scripts/ships/generate.py writes to generated/ (see generated/.gitignore);
+# then moved to bot assets per UPDATING.md — do not version these
+/bot/assets/public/ships.json
+/bot/assets/public/ships_silhouettes/
