--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,39 @@
-git+https://github.com/WoWs-Builder-Team/minimap_renderer.git
-aiohttp>=3.8.1
-aiolimiter>=1.0.0
-aiosqlite>=0.17.0
-beautifulsoup4>=4.11.1
-black>=22.6.0
-cachetools>=5.2.0
-dacite==1.7.0  # https://github.com/konradhalas/dacite/issues/217
+# Shrimpy – Discord bot with World of Warships utilities
+# Python 3.10+ required. Use a virtual environment (python -m venv .venv).
+
+# --- Core runtime ---
 discord.py>=2.0.0
 environ-config>=22.1.0
-greenlet>=2.0.1
-jishaku>=2.5.0
-Pillow>=9.4.0
-polib>=1.1.1
-psutil>=5.9.2
 redis>=5.0.0
-requests>=2.28.1
 rq>=1.11.0
+requests>=2.28.1
+aiohttp>=3.8.1
+aiolimiter>=1.0.0
+
+# --- Database ---
 SQLAlchemy>=1.4.39
-tabulate>=0.8.10
-toml>=0.10.2
-tweepy>=4.12.1
+aiosqlite>=0.17.0
+greenlet>=2.0.1
+
+# --- API / WG / Vortex ---
+dacite==1.7.0  # https://github.com/konradhalas/dacite/issues/217
+
+# --- Bot utilities ---
+cachetools>=5.2.0
 unidecode>=1.3.4
+Pillow>=9.4.0
+toml>=0.10.2
+tabulate>=0.8.10
+polib>=1.1.1
+beautifulsoup4>=4.11.1
+
+# --- Optional extensions ---
+tweepy>=4.12.1  # cat extension (Twitter); omit if not using
+
+# --- Render (replay → minimap video) ---
+# Installs renderer + its deps (e.g. replay_parser). FFmpeg must be installed separately.
+git+https://github.com/WoWs-Builder-Team/minimap_renderer.git
+
+# --- Dev / tooling ---
+jishaku>=2.5.0  # loaded by bot for owner debug commands
+# black>=22.6.0  # optional; for code formatting
