config: optional replay timezone via env/ini (fallback when user not set)

--- a/secrets_template.ini
+++ b/secrets_template.ini
@@ -4,6 +4,7 @@ redis_password =
 redis_host = localhost
 wg_application_id =
 twitter_bearer_token =  # optional, used for extensions/cat
+render_replay_timezone =  # optional; YOUR local IANA timezone (e.g. America/New_York) so batch summary times show in your timezone
 
 [production]
 discord_token =
@@ -11,3 +12,4 @@ redis_password =
 redis_host =
 wg_application_id =
 twitter_bearer_token =  # optional, used for extensions/cat
+render_replay_timezone =  # optional; YOUR local IANA timezone (e.g. America/New_York) so batch summary times show in your timezone
