--- a/secrets_template.ini
+++ b/secrets_template.ini
@@ -5,6 +5,7 @@ redis_host = localhost
 wg_application_id =
 twitter_bearer_token =  # optional, used for extensions/cat
 render_replay_timezone =  # optional; YOUR local IANA timezone (e.g. America/New_York) so batch summary times show in your timezone
+worker_count = 1  # number of parallel render workers (1-4); default 1, more workers = faster batch processing
 
 [production]
 discord_token =
@@ -13,3 +14,4 @@ redis_host =
 wg_application_id =
 twitter_bearer_token =  # optional, used for extensions/cat
 render_replay_timezone =  # optional; YOUR local IANA timezone (e.g. America/New_York) so batch summary times show in your timezone
+worker_count = 1  # number of parallel render workers (1-4); default 1, more workers = faster batch processing
